# RM

./: README.md
C++/: timer.cpp
GAZEBO/: Readme.md
GAZEBO/find_box/: CMakeLists.txt
GAZEBO/find_box/launch/: test.launch.py
GAZEBO/find_box/src/: find_box.cpp
GAZEBO/src/find_box/: package.xml
GAZEBO/src/find_box/launch/: test.launch.py
GAZEBO/src/find_box/src/: find_box.cpp  image.rviz  myrobot.sdf
OpenCV/: OpenCV.sln
OpenCV/OpenCV/: OpenCV.vcxproj  OpenCV.vcxproj.filters  data1.csv  data2.csv  data3.csv  data4.csv  identify.cpp  identify.h  main.cpp
OpenCV/OpenCV/Debug/: vc143.idb
OpenCV/OpenCV/Debug/OpenCV.tlog/: OpenCV.lastbuildstate
OpenCV/OpenCV/Resources/北理珠2021正弦能量机关视频/: Readme.txt
OpenCV/OpenCV/x64/Debug/: OpenCV.exe.recipe  vc143.idb
OpenCV/OpenCV/x64/Debug/OpenCV.tlog/: CL.command.1.tlog  (+3 more)
OpenCV/OpenCV/x64/Release/: OpenCV.exe.recipe  OpenCV.iobj  OpenCV.ipdb
ROS/: Readme.md
ROS/src/golden_miner/: CMakeLists.txt  package.xml
ROS/src/golden_miner/config/: mine_number.yaml
ROS/src/golden_miner/launch/: test.launch.py
ROS/src/golden_miner/src/: gold_mine.cpp  miner.cpp  path.cpp  path_and_ball.rviz  test.rviz
ROS/src/mine_interfaces/: CMakeLists.txt  package.xml
ROS/src/mine_interfaces/msg/: Ore.msg
ROS/src/mine_interfaces/srv/: Mining.srv
YOLOv8/: Readme.md  divide.py  the_first_five_columns.py  ~$调参记录.docx  调参记录.docx
kalman_filter/: kalman.py  kalman_ball.py
tf-urdf/: Readme.md
tf-urdf/install/: local_setup.sh  setup.sh
tf-urdf/log/: latest_build
tf-urdf/src/hero_description/: CMakeLists.txt  package.xml
tf-urdf/src/hero_description/src/: test.cpp
tf-urdf/src/hero_description/urdf/: hero_description.urdf
(+10 files in other folders)
